# rust_sdl2_game_tutorial

./: Cargo.toml  README.md
src/: ai.rs  main.rs
