[package]
name = "game_tutorial"
version = "0.1.0"
authors = ["Satria Faestha <satriaf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sdl2 = "0.32.1"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]