[package]
name = "game_tutorial"
version = "0.1.0"
authors = ["Satria Faestha <satriaf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sdl2 = "0.32.1"
specs = "0.17.0"
specs-derive = "0.4.1"
rand = "0.6"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]